config/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fastapi_service
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              default_source_code:
                inline_string: |
                  function envoy_on_request(request_handle)
                    local headers = request_handle:headers()
                    local body = request_handle:body()
                    local body_text = ""
                    if body ~= nil then
                      body_text = body:getBytes(0, body:length())
                    end
                    request_handle:streamInfo():dynamicMetadata():set("envoy.lb", "request_body", body_text)
                  end
                  
                  function envoy_on_response(response_handle)
                    local body = response_handle:body()
                    local body_text = ""
                    if body ~= nil then
                      body_text = body:getBytes(0, body:length())
                    end
                    response_handle:streamInfo():dynamicMetadata():set("envoy.lb", "response_body", body_text)
                  end
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/output.log
              log_format:
                text_format: |
                  <Event xmlns="event-logging:3">
                    <EventTime>
                      <TimeCreated>%START_TIME%</TimeCreated>
                    </EventTime>
                    <EventSource>
                      <System>
                        <Name>%UPSTREAM_CLUSTER%</Name>
                        <Environment>%ENVIRONMENT(ENVIRONMENT)%</Environment>
                      </System>
                      <Generator>Envoy</Generator>
                      <Device>
                        <Hostname>%HOSTNAME%</Hostname>
                        <IPAddress>%DOWNSTREAM_LOCAL_ADDRESS%</IPAddress>
                        <MACAddress>00:00:00:00:00:00</MACAddress>
                      </Device>
                      <Client>
                        <IPAddress>%DOWNSTREAM_REMOTE_ADDRESS%</IPAddress>
                      </Client>
                      <User>
                        <Id>%REQ(X-USER-DN)%</Id>
                      </User>
                    </EventSource>
                    <EventDetail>
                      <TypeId>%REQ(:METHOD)%</TypeId>
                      <Description>HTTP Request: %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% - Status: %RESPONSE_CODE%</Description>
                      <Request>
                        <Method>%REQ(:METHOD)%</Method>
                        <Path>%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%</Path>
                        <Protocol>%PROTOCOL%</Protocol>
                        <RequestId>%REQ(X-REQUEST-ID)%</RequestId>
                        <Headers>
                          <Authority>%REQ(:AUTHORITY)%</Authority>
                          <UserAgent>%REQ(USER-AGENT)%</UserAgent>
                          <ContentType>%REQ(CONTENT-TYPE)%</ContentType>
                          <ContentLength>%REQ(CONTENT-LENGTH)%</ContentLength>
                          <Accept>%REQ(ACCEPT)%</Accept>
                          <Authorization>%REQ(AUTHORIZATION)%</Authorization>
                        </Headers>
                        <Body>%DYNAMIC_METADATA(envoy.lb:request_body)%</Body>
                      </Request>
                      <Response>
                        <Status>%RESPONSE_CODE%</Status>
                        <StatusDetails>%RESPONSE_CODE_DETAILS%</StatusDetails>
                        <Flags>%RESPONSE_FLAGS%</Flags>
                        <Headers>
                          <ContentType>%RESP(CONTENT-TYPE)%</ContentType>
                          <ContentLength>%RESP(CONTENT-LENGTH)%</ContentLength>
                          <Server>%RESP(SERVER)%</Server>
                        </Headers>
                        <Body>%DYNAMIC_METADATA(envoy.lb:response_body)%</Body>
                      </Response>
                      <Upstream>
                        <Cluster>%UPSTREAM_CLUSTER%</Cluster>
                        <Host>%UPSTREAM_HOST%</Host>
                        <LocalAddress>%UPSTREAM_LOCAL_ADDRESS%</LocalAddress>
                      </Upstream>
                      <Metrics>
                        <Duration>%DURATION%</Duration>
                        <BytesSent>%BYTES_SENT%</BytesSent>
                        <BytesReceived>%BYTES_RECEIVED%</BytesReceived>
                      </Metrics>
                      <Authenticate>
                        <Action>%REQ(:METHOD)%</Action>
                        <User>
                          <Id>%REQ(X-USER-DN)%</Id>
                        </User>
                        <Outcome>
                          <Success>true</Success>
                          <Permitted>true</Permitted>
                        </Outcome>
                      </Authenticate>
                    </EventDetail>
                  </Event>

  clusters:
  - name: fastapi_service
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: fastapi_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: fastapi-app
                port_value: 8000
